# couchy

./: .gitignore  Cargo.toml  Config.toml  README.md  _design__abk.json  _design__av0_style.json  _design__bestseller.json  run.sh  run_gui.sh
.cargo/: config.toml
.github/workflows/: freebsd_release.yml  mac_release.yml  mac_release.yml.1  release.yml
couchy_models/: Cargo.toml
src/: config.rs  main.rs  view.rs
