[package]
name = "couchy"
version = "0.1.0"
edition = "2021"

[dependencies]
# https://docs.rs/eframe/latest/eframe/
eframe = {version= "0.28.1",features = ["wgpu"]}
#wgpu = { version = "*", features = ["webgpu", "webgl"] }

# https://docs.rs/clap/latest/clap/
clap = {version='*', features = ["cargo","derive"]}

# https://docs.rs/homedir/latest/homedir/
homedir = "*"




